--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-alice-carousel": "^2.9.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
