--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1692.0",
     "react": "^19.1.1",
     "react-alice-carousel": "^2.9.1",
     "react-dom": "^19.1.1",
