--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1692.0",
     "nodemailer": "^7.0.6",
+    "postman": "^0.2.0",
     "react": "^19.1.1",
     "react-alice-carousel": "^2.9.1",
     "react-dom": "^19.1.1",
