--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-sdk": "^2.1692.0",
     "nodemailer": "^7.0.6",
     "postman": "^0.2.0",
+    "rc-slider": "^11.1.8",
     "react": "^19.1.1",
     "react-alice-carousel": "^2.9.1",
     "react-dom": "^19.1.1",
